# AI

./: .gitignore  Informed.ipynb  README.md  Uninformed.ipynb  requirements.txt  tp01.ipynb  utils.py
src/: __init__.py  algorithms.py  environment.py  eval.py  robot_handler.py  utils.py
src_cuda/: CMakeLists.txt  file.txt  main.cc  main.cu
wharehouse_ex/: 500_500.csv
